[package]
name = "netlib"
version = "0.1.0"
edition = "2021"
description = ""
authors = [ "minghu6 <a19678zy@163.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }
getset = "0.1.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.5.4"
# nix = "0.24.1"
either = "~1.7"
dns-lookup = "1"

crossbeam-channel = "0.5"
signal-hook = "0.3.14"
chrono = "0.4"
rand = "0.8.5"
maplit = "0.1.2"

clap = { version = "^3", features = ["derive"] }
clap_complete = "3.1.1"
shellexpand = "2.1"


[[bin]]
name="tcp_server_r0"
path="bin/tcp_server_r0.rs"

[[bin]]
name = "ping"
path = "bin/ping.rs"

[[bin]]
name = "dos_icmp"
path = "bin/dos_icmp.rs"

[[bin]]
name = "dos_tcp"
path = "bin/dos_tcp.rs"

[[bin]]
name="tcp_client_r0"
path="bin/tcp_client_r0.rs"

[[bin]]
name="tcp_client_c0"
path="bin/tcp_client_c0.rs"

