[package]
name = "netlib"
version = "0.1.0"
edition = "2021"
description = ""
authors = [ "minghu6 <a19678zy@163.com>" ]


[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }
ifstructs = "0.1.1"
getset = "0.1.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4.1"
memmap2 = "0.5.4"
either = "~1.7"
bytes = "1"


# http
http = "0.2"
mime = "0.3.16"
cookie = "0.16"
encoding = "0.2.33"

dns-lookup = "1"

chrono = "0.4"
rand = "0.8.5"
maplit = "0.1.2"
regex = "1"
lazy_static = "1.4.0"
itertools = "0.10"

# Gateway discovery service
default-net = "0.11.0"



[dev-dependencies]
###################### Config Parser ######################
serde_yaml = "0.9"

########################## SYNC ##########################
crossbeam-channel = "0.5"
futures = { version = "0.3", features = ["thread-pool", "executor"] }
signal-hook = "0.3.14"

########################## CLI ##########################
clap = { version = "^3", features = ["derive"] }
clap_complete = "3.1.1"
shellexpand = "2.1"

########################## HTTP LIB ##########################
qstring = "0.7.2"
flate2 = "1.0"

# Logger
log = "0.4"
log4rs = { version = "1.1.1", features = ["background_rotation"] }

# helper coll
m6coll = "0.2"


[[example]]
name="tcp_server_r0"
path="bin/tcp_server_r0.rs"

[[example]]
name = "ping"
path = "bin/ping.rs"

[[example]]
name = "dos_icmp"
path = "bin/dos_icmp.rs"

[[example]]
name = "dos_tcp"
path = "bin/dos_tcp.rs"

[[example]]
name="tcp_client_r0"
path="bin/tcp_client_r0.rs"

[[example]]
name="tcp_client_c0"
path="bin/tcp_client_c0.rs"

[[example]]
name="shttpd"
path="bin/shttpd/main.rs"

[[example]]
name = "arp"
path = "bin/arp.rs"

[[example]]
name="sip"
path="bin/sip/main.rs"
